<resources>
    <string name="app_name">Life Line Planer</string>
    <string name="routine">Routine</string>
    <string name="tasks">Tasks</string>
    <string name="lifestats">Stats</string>
    <string name="notes">Notes</string>
    <string name="vsru">News</string>
    <string name="detailNoteTitleHint">Заголовок</string>
    <string name="detailNoteSubtitleHint">Подзаголовок</string>
    <string name="noteEDHinteText">Текст</string>
    <string name="chooseTheMarkColor">Choose the mark color</string>
    <string name="newsItemSubtitle">Subtitle</string>
    <string name="newsItemTitle">Title</string>
    <string name="newsItemContent">Content</string>
    <string name="subtitle">Subtitle</string>
    <string name="timeWaste">Осталось дней:</string>
    <string name="zero">0</string>
</resources>