<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskRawLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_item"
    android:layout_margin="15dp">

    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_bottomnavigation"
        android:gravity="top"
        android:padding="10dp"
        android:text="@string/newsItemTitle"
        android:textColor="@color/theme_yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/taskSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_bottomnavigation"
        android:gravity="top"
        android:padding="10dp"
        android:text="@string/subtitle"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/taskEndTimeText"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_bottomnavigation"
        android:gravity="top"
        android:padding="10dp"
        android:text="@string/timeWaste"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskSubtitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/taskEndTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_bottomnavigation"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/zero"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/taskEndTimeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/taskEndTimeText"
        app:layout_constraintTop_toTopOf="@+id/taskEndTimeText" />

<!--    <TextView-->
<!--        android:id="@+id/taskNotDoneNubmerText"-->
<!--        android:layout_width="180dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="10dp"-->
<!--        android:layout_marginTop="475dp"-->
<!--        android:background="@drawable/bg_bottomnavigation"-->
<!--        android:gravity="top"-->
<!--        android:padding="10dp"-->
<!--        android:text="Задач выполнено:"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/taskEndTimeText"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

<!--    <TextView-->
<!--        android:id="@+id/taskSubtaskNotDoneNubmer"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="10dp"-->
<!--        android:background="@drawable/bg_bottomnavigation"-->
<!--        android:gravity="center"-->
<!--        android:padding="10dp"-->
<!--        android:text="@string/zero"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/taskNotDoneNubmerText"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/taskNotDoneNubmerText"-->
<!--        app:layout_constraintTop_toTopOf="@+id/taskNotDoneNubmerText" />-->

</androidx.constraintlayout.widget.ConstraintLayout>